WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33862
[Chromium] Embedder initiated loads should not always stop existing loads
https://bugs.webkit.org/show_bug.cgi?id=33862
Summary
[Chromium] Embedder initiated loads should not always stop existing loads
Darin Fisher (:fishd, Google)
Reported
2010-01-19 13:22:26 PST
[Chromium] Embedder initiated loads should not always stop existing loads For example, if navigating within session history to a reference fragment before the 'load' event runs, page loading should not be stopped.
Attachments
v1 patch
(2.24 KB, patch)
2010-03-05 14:18 PST
,
Darin Fisher (:fishd, Google)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2010-03-05 14:18:44 PST
Created
attachment 50120
[details]
v1 patch
Darin Fisher (:fishd, Google)
Comment 2
2010-03-05 14:19:44 PST
The point of this patch is to leave it up to the FrameLoader to decide when to stop any existing loads. That matches the behavior of Safari (and other browsers).
WebKit Commit Bot
Comment 3
2010-03-06 07:30:47 PST
Comment on
attachment 50120
[details]
v1 patch Clearing flags on attachment: 50120 Committed
r55626
: <
http://trac.webkit.org/changeset/55626
>
WebKit Commit Bot
Comment 4
2010-03-06 07:30:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug