2010-03-06  Darin Fisher  <darin@chromium.org>

Reviewed by David Levin.

        [Chromium] Embedder initiated loads should not always stop existing loads
        https://bugs.webkit.org/show_bug.cgi?id=33862

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::reload):
        (WebKit::WebFrameImpl::loadRequest):
        (WebKit::WebFrameImpl::loadHistoryItem):
        (WebKit::WebFrameImpl::loadData):

git-svn-id: svn://svn.chromium.org/blink/trunk@55626 bbb929c8-8fbe-4397-9dbb-9b2b20218538