third_party/WebKit/WebKit/chromium/src/WebFrameImpl.cpp
@@ -717,9 +717,6 @@ bool WebFrameImpl::insertStyleText(
 void WebFrameImpl::reload(bool ignoreCache)
 {
     m_frame->loader()->history()->saveDocumentAndScrollState();
-
-    stopLoading();  // Make sure existing activity stops.
-
     m_frame->loader()->reload(ignoreCache);
 }
 
@@ -733,7 +730,6 @@ void WebFrameImpl::loadRequest(const WebURLRequest& request)
         return;
     }
 
-    stopLoading();  // Make sure existing activity stops.
     m_frame->loader()->load(resourceRequest, false);
 }
 
@@ -741,8 +737,6 @@ void WebFrameImpl::loadHistoryItem(const WebHistoryItem& item)
 {
     RefPtr<HistoryItem> historyItem = PassRefPtr<HistoryItem>(item);
     ASSERT(historyItem.get());
-
-    stopLoading();  // Make sure existing activity stops.
 
     // If there is no currentItem, which happens when we are navigating in
     // session history after a crash, we need to manufacture one otherwise WebKit
@@ -779,8 +773,6 @@ void WebFrameImpl::loadData(const WebData& data,
     if (replace && !unreachableURL.isEmpty())
         request = m_frame->loader()->originalRequest();
     request.setURL(baseURL);
-
-    stopLoading();  // Make sure existing activity stops.
 
     m_frame->loader()->load(request, substData, false);
     if (replace) {
